# vitheim

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
crates/vitheim/: Cargo.toml  README.md
crates/vitheim-budget/: Cargo.toml  README.md
crates/vitheim-error/: Cargo.toml  README.md
crates/vitheim-id/: Cargo.toml  README.md
crates/vitheim-time/: Cargo.toml  README.md
crates/vitheim-time/src/: lib.rs
crates/vitheim/src/: lib.rs
docs/: ARCHITECTURE.md  AUTHORITY_REVIEWS.md  IMPLEMENTATION_PLAN.md  INITIAL_IDEA.md  INVARIANT_OWNERSHIP.md  LAW_ACTIVE_CATALOGS.md  LAW_GENERATIONS.md  LAW_GENERATION_MANIFEST.md  LAW_MANIFEST_ADMISSIONS.md  LAW_SEMANTIC_REALIZATIONS.md  MODULARITY_POLICY.md  PUBLICATION_POLICY.md  RELEASE_PLAN.md  ROADMAP_GAP_DISPOSITIONS.md  SECURITY_CONTROLS.md  SUPPLY_CHAIN_SECURITY.md  THREAT_MODEL.md  TOOLCHAIN_POLICY.md  github-security-settings.md
docs/implementation/: FEDERATION.md  OPTION_DECISIONS.md  PHASE_A.md  PHASE_B.md  PHASE_C.md  PHASE_D.md  PHASE_E.md  PHASE_F.md  PHASE_G.md  PHASE_H.md  PHASE_I.md  PHASE_J.md  PHASE_K.md  PHASE_L.md  PHASE_M.md  PHASE_N.md  PHASE_O.md  PRODUCTION_1_0.md
release-notes/: README.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_TEMPLATE.md
sbom/: vitheim.spdx.json
scripts/: check_authority_reviews.sh  check_doc_links.sh  check_implementation_plan.sh  check_invariant_child_references.sh  check_invariant_ownership.sh  check_latest_tools.sh  check_law_active_catalogs.sh  check_law_generations.sh  check_law_policy_adversarial.sh  check_law_semantic_realizations.sh  check_workspace_policy.sh  checks.sh  generate-sbom.sh  generate_authority_reviews.sh  release_0_1_gate.sh  validate-release-readiness.sh
security/pentest/: README.md  v0.1.0.md
(+3 files in other folders)
