[workspace]
resolver = "3"
members = [
    "crates/vitheim",
    "crates/vitheim-budget",
    "crates/vitheim-error",
    "crates/vitheim-id",
    "crates/vitheim-time",
]
default-members = ["crates/vitheim"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "EUPL-1.2"
repository = "https://github.com/valkyoth/vitheim"
homepage = "https://github.com/valkyoth/vitheim"

[workspace.dependencies]
vitheim-budget = { path = "crates/vitheim-budget", version = "=0.1.0" }
vitheim-error = { path = "crates/vitheim-error", version = "=0.1.0" }
vitheim-id = { path = "crates/vitheim-id", version = "=0.1.0" }
vitheim-time = { path = "crates/vitheim-time", version = "=0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
overflow-checks = true
panic = "abort"
strip = "symbols"

