[package]
name = "vitheim-time"
description = "Private deterministic time primitives for Vitheim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

